# riveterminal

./: .gitignore  INSTALL.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  README.md  SPEC.md  pyproject.toml  test_app_init.py  test_basic.py
src/riveterminal/: __init__.py  __main__.py  app.py  config.py  db.py
src/riveterminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/riveterminal/data/: __init__.py  coingecko.py  fred.py  news_feeds.py  sec.py  yahoo.py
src/riveterminal/screens/: __init__.py  chart.py  crypto.py  dashboard.py  economic.py  news.py  options.py  portfolio.py  quote.py  screener.py  watchlist.py
src/riveterminal/utils/: __init__.py  charts.py  formatting.py
src/riveterminal/widgets/: __init__.py  command_bar.py  ticker_tape.py
