[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riveterminal"
version = "0.1.0"
description = "Open-source Bloomberg Terminal TUI built on free data sources"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "RiverTerminal Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "textual>=0.63.0",
    "rich>=13.7.0",
    "yfinance>=0.2.18",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "plotext>=5.2.8",
    "pandas>=2.2.0",
    "requests-cache>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/rivermortgage/riveterminal"
Repository = "https://github.com/rivermortgage/riveterminal"
Issues = "https://github.com/rivermortgage/riveterminal/issues"

[project.scripts]
riveterminal = "riveterminal.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true